try to fix bugs on ios

--- a/frontend/src/Components/Pages/AboutSchool/AboutSchool.scss
+++ b/frontend/src/Components/Pages/AboutSchool/AboutSchool.scss
@@ -896,7 +896,6 @@ $laptop-st: 1.3;
     @include phone-style {
       width: 343px;
       height: 588px;
-      grid-column: 1/5;
       border-radius: 24px;
       padding: 12px 24px 24px 24px;
       justify-content: space-between;
@@ -906,7 +905,6 @@ $laptop-st: 1.3;
     @include tablet-style {
       width: calc(343px * $tablet-st); 
       height: calc(612px * $tablet-st); 
-      grid-column: 1/5;
       border-radius: calc(24px * $tablet-st); 
       padding: calc(24px * $tablet-st); 
       justify-content: space-between;
@@ -1131,13 +1129,14 @@ $laptop-st: 1.3;
     font-size: 56px;
     font-weight: bold;
     color: $white-100;
+    text-wrap: nowrap;
   
     @include phone-style {
       font-size: 32px;
     }
   
     @include tablet-style {
-      font-size: calc(32px * $tablet-st); 
+      font-size: calc(32px * $tablet-st);
     }
   
     @include laptop-style {
