--- a/frontend/src/Components/Pages/HomePage/HomePage.scss
+++ b/frontend/src/Components/Pages/HomePage/HomePage.scss
@@ -55,12 +55,12 @@ $tablet-st: 1.5;
    gap: 25px;
 
    @include phone-style {
-     grid-template-columns: repeat(4, 73px);
-     gap: 16px;
-     background-position: top left;
-     background-size: 234%;
-     height: 100%;
-     margin: 0;
+    display: flex;
+    background-position: top left;
+    background-size: 234%;
+    height: 100%;
+    margin: 0;
+    gap: 0;
    }
 
    @include laptop-style {
@@ -72,13 +72,10 @@ $tablet-st: 1.5;
 
    @include tablet-style {
       width: 100%;
-      grid-template-columns: repeat(4, calc(73px * $tablet-st));
-      gap: calc(16px * $tablet-st);
-      justify-content: center;
+      gap: 0;
       background-position: top left;
       background-size: 293%;
       margin: 0;
-      padding: calc(16px * $tablet-st) calc(16px * $tablet-st) 0 calc(16px * $tablet-st);
    }
   }
 
@@ -118,7 +115,6 @@ $tablet-st: 1.5;
     text-wrap: nowrap;
 
     @include phone-style {
-      grid-column: 1/5;
       font-size: 16px;
       left: 0;
       top: 8px;
@@ -127,11 +123,9 @@ $tablet-st: 1.5;
 
     @include laptop-style {
       font-size: calc(48px / $laptop-st) ;
-      grid-column: 1/7;
     }
 
     @include tablet-style {
-      grid-column: 1/5;
       font-size: calc(16px * $tablet-st);
       left: 0;
       top: calc(8px * $tablet-st);
@@ -149,11 +143,9 @@ $tablet-st: 1.5;
     font-weight: bold;
     font-family: NeueBold, sans-serif;
     color: $secondary-color;
-    letter-spacing: 2px;
     background: transparent;
 
     @include phone-style {
-      grid-column: 1 / 5;
       letter-spacing: 0;
       font-size: 17px;
       top: 116px;
@@ -165,10 +157,8 @@ $tablet-st: 1.5;
     }
 
     @include tablet-style {
-      grid-column: 1 / 5;
-      letter-spacing: 0;
       font-size: calc(17px * $tablet-st);
-      top: 196px;
+      top: 172px;
       text-align: end;
     }
   }
@@ -192,7 +182,6 @@ $tablet-st: 1.5;
       justify-content: center;
       width: 345px;
       height: 105px;
-      grid-column: 1 / 5;
       font-size: 88px;
       left: 14px;
       top: 21px;
@@ -205,7 +194,6 @@ $tablet-st: 1.5;
     @include tablet-style {
       width: calc(345px * $tablet-st); 
       height: calc(105px * $tablet-st); 
-      grid-column: 1 / 5;
       font-size: calc(88px * $tablet-st); 
       left: calc(14px * $tablet-st); 
       top: calc(21px * $tablet-st);
@@ -261,7 +249,6 @@ $tablet-st: 1.5;
     @include phone-style {
       width: 89px;
       height: 78px;
-      grid-column: 1 / 3;
       left: -12px;
       top: 24px;
     }
@@ -274,9 +261,8 @@ $tablet-st: 1.5;
     @include tablet-style {
       width: calc(89px * $tablet-st);   
       height: calc(78px * $tablet-st); 
-      grid-column: 1 / 3;
-      left: calc(-12px * $tablet-st);
-      top: calc(24px * $tablet-st);
+      top: 34px;
+      left: -19px;
     }
   }
   
@@ -296,7 +282,6 @@ $tablet-st: 1.5;
     @include phone-style {
       width: 52px;
       height: 36px;
-      grid-column: 1 / 3;
       top: 97px;
       left: 32px;
     }
@@ -309,8 +294,7 @@ $tablet-st: 1.5;
     @include tablet-style {
       width: calc(52px * $tablet-st);
       height: calc(36px * $tablet-st);
-      grid-column: 1 / 3;
-      top: 171.5px;
+      top: 147px;
       left: 46px;
     }
   }
@@ -479,7 +463,6 @@ $tablet-st: 1.5;
   
     @include phone-style {
       font-size: 16px;
-      grid-column: 1 / 5;
       top: 145px;
       letter-spacing: 0;
     }
@@ -490,8 +473,7 @@ $tablet-st: 1.5;
   
     @include tablet-style {
       font-size: calc(16px * $tablet-st);
-      grid-column: 1 / 5;
-      top: 249.5px;;     
+      top: 225.5px;   
       letter-spacing: 0; 
     }
   }
@@ -511,7 +493,6 @@ $tablet-st: 1.5;
       @include button;
   
       @include phone-style {
-        grid-column: 1 / 5;
         width: 343px;
         height: 40px;
         left: 0;
@@ -522,7 +503,6 @@ $tablet-st: 1.5;
       }
   
       @include tablet-style {
-        grid-column: 1 / 5;
         width: calc(343px * $tablet-st);
         top: 460px;
         left: 50%;
@@ -558,13 +538,11 @@ $tablet-st: 1.5;
         height: 40px;
         left: 0;
         top: 232px;
-        grid-column: 1 / 5;
       }
   
       @include tablet-style {
         width: calc(343px * $tablet-st);
         top: 370px;
-        grid-column: 1 / 5;
         left: 50%;
         transform: translate(-50%);
       }
